hphp/hack/test/enum_atom/typing/atom3.php.exp
File "atom3.php", line 22, characters 21-21:
Invalid argument (Typing[4110])
  File "atom3.php", line 9, characters 11-16:
  Expected `string`
  File "atom3.php", line 22, characters 21-21:
  But got `int`
File "atom3.php", line 23, characters 23-26:
Invalid argument (Typing[4110])
  File "atom3.php", line 21, characters 29-31:
  Expected `int`
  File "atom3.php", line 9, characters 11-16:
  But got `string`
